overflow issues

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -4,10 +4,10 @@
 		font-size: 16px;
 	}
 	@include breakpoint-up($size_tablet) {
-		font-size: 19px;
+		font-size: 18px;
 	}
 	@include breakpoint-up($size_desktop) {
-		font-size: 23px;
+		font-size: 22px;
 	}
 }
 
@@ -15,10 +15,14 @@
 	box-sizing: border-box;
 }
 
+html{
+	overflow: hidden;
+}
 body {
 	margin: 0;
 	padding: 0;
 	line-height: 1.4;
+	width: 100vw;
 	overflow: hidden;
 	padding: 0 1em;
 	min-height: 100vh;
